# vc-search

./: README.md  docker-compose.elastic.yml  main.py  pyproject.toml  search_main.py
query_evaluation/: evaluate_search.py  metrics_search_results_20251115_020918.csv  metrics_search_results_20251115_034012.csv  search_results_20251115_020918.csv
src/vc_search/: config.py
src/vc_search/models/: article.py
src/vc_search/query_evaluation/: analyze_results.py  auto_marker.py  evaluate_queries.py  evaluate_search.py  metrics_search_results_ml_20251115_062635.csv  metrics_search_results_ml_20251115_062902.csv  relevance_model.py  search_results_20251115_020918.md  search_results_20251115_034012.csv  search_results_20251115_034012.md  search_results_ml_20251115_062635.csv  search_results_ml_20251115_062635.md  search_results_ml_20251115_062902.csv  search_results_ml_20251115_062902.md
src/vc_search/scraper/: vc_scraper.py
src/vc_search/search/: elastic_client.py
src/vc_search/services/: scraping_service.py
src/vc_search/storage/: json_storage.py
src/vc_search/utils/: parallel.py
